Added JWT security and CRUD operations for User entity